2018-09-15 Douglas R. Reno <renodr@linuxfromscratch.org>
   * Modify rpcbind.service to not do a warm start. This solves a bug where, as of
     LFS 8.3, rpcbind will fail to start, exiting with error code 1. In addition,
     the sysvinit bootscript does not use the warm start feature. Without warm start,
     the systemd unit now causes rpcbind to start correctly.

2018-01-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add lightdm service.

2016-03-07 DJ Lucas <dj@higgs.linuxfromscratch.org>
   * Add samba service.

2014-07-20 Armin K. <krejzi@email.com>
   * Import first revision of the standalone
     units package.
