@@ -1,2 +1,0 @@
-d /run/nscd 755 root root -
-
