@@ -5,3 +5,6 @@ Requires=acpid.socket
 [Service]
 StandardInput=socket
 ExecStart=/usr/sbin/acpid
+
+[Install]
+WantedBy=sockets.target
