@@ -1,16 +1,0 @@
-[Unit]
-Description=Name Service Cache Daemon
-
-[Service]
-Type=forking
-ExecStart=/usr/sbin/nscd
-ExecStop=/usr/sbin/nscd --shutdown
-ExecReload=/usr/sbin/nscd -i passwd
-ExecReload=/usr/sbin/nscd -i group
-ExecReload=/usr/sbin/nscd -i hosts
-ExecReload=/usr/sbin/nscd -i services
-Restart=always
-PIDFile=/run/nscd/nscd.pid
-
-[Install]
-WantedBy=multi-user.target
