@@ -1,10 +1,0 @@
-[Unit]
-Description=A secure replacement for inetd
-After=network.target
-
-[Service]
-ExecStart=/usr/sbin/xinetd -dontfork
-ExecReload=/bin/kill -HUP $MAINPID
-
-[Install]
-WantedBy=multi-user.target
